[tool.poetry]
name = "kfp-deployer"
version = "0.1.0"
description = ""
authors = ["Karno <karnoroid@gmail.com>"]

[tool.poetry.scripts]
kfp-deploy = "kfp_deployer.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
