[tool.poetry]
name = "kfp-deployer"
version = "0.1.0"
description = ""
authors = ["Karno <karnoroid@gmail.com>"]

[tool.poetry.scripts]
kfp-deploy = "kfp_deployer.main:main"

[tool.poetry.dependencies]
python = "^3.6"
kfp = "^1.3.0"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = "^1.3.1"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
