[tool.poetry]
name = "kfp-deployer"
version = "0.1.0"
description = "Deploy the KFP ML Pipeline from CLI."
authors = ["Karno <karnoroid@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reproio/kfp-deployer"

[tool.poetry.scripts]
kfp-deploy = "kfp_deployer.main:main"

[tool.poetry.dependencies]
python = "^3.6"
kfp = "^1.3.0"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = "^1.3.1"
black = { version = "^20.8b1", allow-prereleases = true }
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0", 'setuptools>=38.6.0', 'wheel>0.31.0']
build-backend = "poetry.core.masonry.api"
